--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ biopython = "^1.83"
 click = "^8.1.7"
 loguru = "^0.7.2"
 pandas = "^2.2.1"
+streamlit = "^1.31.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.0.0"
